--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
-    <title>React App</title>
+    <title>Connect Legal</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
